<resources>
    <string name="app_name">DailyQuest</string>
    <string name="get_started">Get Started</string>
    <string name="your_name">Your name</string>
    <string name="your_age">Your age</string>
    <string name="your_height">Your height</string>
    <string name="your_weight">Your weight</string>
    <string name="log_in">Log in</string>
    <string name="required">Required*</string>
    <string name="error_age_limit">Age cannot be greater than 125</string>
    <string name="error_height_limit">Height cannot be greater than 250 cm</string>
    <string name="error_weight_limit">Weight cannot be greater than 650 kg</string>
    <string name="error_fill_all_fields">Please fill out all fields</string>
    <string name="daily_quest">Daily Quest</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="welcome_to">Welcome to</string>
    <string name="dailyquest">Daily<b>Quest</b></string>
    <string name="hey_there_enter_your_details">Hey there,\n<b>Enter your details</b></string>
    <string name="edit">Edit</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="cm">cm</string>
    <string name="yo">yo</string>
    <string name="kg">kg</string>
    <string name="other">Other</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="update_successful">Successful!</string>
    <string name="login_successful">Successful!</string>
    <string name="done">Done</string>


</resources>