<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey_there_enter_your_details"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginBottom="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            app:helperText="@string/required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginName"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:autofillHints="name"
                android:drawablePadding="8dp"
                android:hint="@string/your_name"
                android:inputType="text"
                android:maxLength="21"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            app:endIconMode="clear_text"
            app:helperText="@string/required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginAge"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawablePadding="8dp"
                android:hint="@string/your_age"
                android:inputType="number"
                android:maxLength="3"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            app:endIconMode="clear_text"
            app:helperText="@string/required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginHeight"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawablePadding="8dp"
                android:hint="@string/your_height"
                android:inputType="number"
                android:maxLength="3"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            app:endIconMode="clear_text"
            app:helperText="@string/required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginWeight"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawablePadding="8dp"
                android:hint="@string/your_weight"
                android:inputType="number"
                android:maxLength="3"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/done"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>